# ovirt-network-handler

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.attachment  Dockerfile.info  README.md  README.rst  Vagrantfile  setup.cfg  setup.py  tox.ini
manifests/: add-on.yml
ovirt_host_network_handler/: _cluster.py  _vdsm.py  handler.py
ovirt_network_handler/: __init__.py  _cluster.py  _system.py  _vdsm.py  attachment_handler.py  info_handler.py
ovirt_node_network_handler/: _cluster.py  _vdsm.py  attachment_handler.py  handler.py  info_handler.py  standalone.py
vdsm_net_handler/: cluster.py  configurator.py  handler.py  validation.py
