[metadata]
name = ovirt-node-network-handler
license = Apache-2
author = Petr Horacek
author_email = phoracek@redhat.com
description = oVirt Node Network Handler
url = https://www.github.com/phoracek/ovirt-node-network-handler

[files]
packages =
  ovirt_node_network_handler

[entry_points]
console_scripts =
  ovirt-node-network-start-handler = ovirt_node_network_handler.handler:main
