[metadata]
name = ovirt-network-handler
license = Apache-2
author = Petr Horacek
author_email = phoracek@redhat.com
description = oVirt Network Handler
url = https://www.github.com/phoracek/ovirt-network-handler

[files]
packages =
  ovirt_network_handler

[entry_points]
console_scripts =
  ovirt-network-attachment-start-handler = ovirt_network_handler.attachment_handler:main
  ovirt-network-info-start-handler = ovirt_network_handler.info_handler:main
